# NanoPython

./: .gitignore  CMakeLists.txt  bytecode.txt
inc/: ast.h  bytecode.h  compiler.h  disasm.h  eval.h  gc.h  hashmap.h  intern_string.h  lexer.h  native_func.h  np_config.h  parser.h  token.h  tokens.h  vars.h  vm.h  vm_objects.h
inc/vm/: native_func.h  vm.h  vm_config.h  vm_objects.h
src/: ast.c  bytecode.c  bytecode.txt  compiler.c  disasm.c  eval.c  gc.c  hashmap.c  intern_string.c  lexer.c  main.c  main_compiler.c  main_disasm.c  main_vm.c  native_func.c  parser.c  token.c  vars.c  vm.c  vm_objects.c
src/vm/: gc.c  intern_string.c  native_func.c  vm.c  vm_objects.c
test/: README.md  run_tests.sh  run_tests_split.sh  test_arithmetic.py  test_boolean_logic.py  test_classes.py  test_comprehensive.py  test_conditionals.py  test_data_structures.py  test_edge_cases.py  test_functions.py  test_gc.py  test_gc_stress.py  test_loops.py  test_scope.py  test_strings.py
